<resources>
    <string name="app_name">Rist Stock</string>
    <string name="retry">retry</string>
    <string name="cancel">cancle</string>
    <string name="cancelSt">cancle</string>
    <string name="dummy">dummy</string>
    <string name="take_pic">take photo</string>
    <string name="open_gallery">open gallery</string>
    <string name="title">title</string>
    <string name="week">week</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="satday">satday</string>
    <string name="friday">friday</string>
    <string name="thursday">thursday</string>
    <string name="wednesday">wednesday</string>
    <string name="thusday">thusday</string>
    <string name="monday">monday</string>
    <string name="sunday">sunday</string>
    <string name="and">and</string>
    <string name="no_address">no_address</string>
    <string name="mapKey">mapKey</string>
    <string name="share_with">share with</string>
    <string name="fail_to_get_data">Fail to get data</string>
    <string name="logout">logout</string>
    <string name="user_id">User ID</string>
    <string name="check">Check</string>
    <string name="user_name">User Name</string>
    <string name="Category">Category</string>
    <string name="Branch_Name">Branch ID-Name</string>
    <string name="Area_Number">Area Number</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="Language">Language</string>
    <string name="stock_management">Stock management</string>
    <string name="Barcode">Barcode</string>
    <string name="reference">Reference</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="pack">Pack</string>
    <string name="price">Price</string>
    <string name="OldQuantity">Old Quantity</string>
    <string name="addQuantity">Add Quantity</string>
    <string name="admin_Quantity">admin Quantity</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="showDetails">Show Details</string>
    <string name="Old_Quantity">Old Quantity</string>
    <string name="area">Area</string>
    <string name="time">Time</string>
    <string name="invalid_input">Field Required</string>
    <string name="invalid_text">Invalid Text</string>
    <string name="invalid_area_number">Invalid AreaNumber</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="please_wait_login">please wait Login</string>
    <string name="please_wait_scan">please wait to scan</string>
    <string name="scanning">please wait to scan</string>
    <string name="fail_signin">Fail to Sign in</string>
    <string name="user">User</string>
    <string name="want_signout">Are you want to logout ?</string>
    <string name="log_out">Log out</string>
    <string name="should_allow_permission">should allow permission</string>
    <string name="some_permission_denied">some permission denied</string>
    <string name="reload">اعادة تحميل</string>
    <string name="no_data">No Data</string>
    <string name="change_url">Change Url</string>
    <string name="url">Enter Url</string>
    <string name="Statistics">Statistics</string>
    <string name="listed_products_number">Number of stripped Items</string>
    <string name="reviewed_products_number">Number of reviewed Items</string>
    <string name="percent_of_referenced_products">The percentage of products referenced</string>
    <string name="correct_products_number">Correct Items Count</string>
    <string name="wrong_products_number">Wrong Items Number</string>
    <string name="percent_of_wrong_products">Percent of Wrong Items</string>
    <string name="website_review_details">Website Review Details</string>
    <string name="added_sucess">Added Successfully</string>
    <string name="add_product">add product</string>
    <string name="please_wait_add_product">Please wait to add the product</string>
    <string name="fail_to_add">Fail to add Data</string>
    <string name="setquanity">Save Edit</string>
    <string name="getData">Get Data</string>
    <string name="fail_to_add_quanity" />
    <string name="please_wait_to_set_quanity" />
    <string name="enter_barcode">Enter Barcode</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="confirm">Confirm</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="https_risteh_com_stocktake_bh1" translatable="false">http://risteh.com/StockTake/BH1/</string>
<!--    <string name="https_risteh_com_stocktake_bh1" translatable="false">http://ksa001.dynns.com/StockTake/BH1/</string>-->
    <string name="keyboard_visibility">Keyboard Visibility</string>
<!--    6281155106432-->

</resources>
