<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_top_corner_white_fill"
        android:orientation="vertical"
        android:paddingTop="@dimen/_25sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_lang" />


            <com.app.riststock.spichalViews.STextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_language"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />


        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="horizontal">

            <com.app.riststock.spichalViews.SRadioButton
                android:id="@+id/arabicRB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/arabic"
                android:textColor="@color/header2"
                android:textSize="@dimen/_12ssp" />

            <com.app.riststock.spichalViews.SRadioButton
                android:id="@+id/englishRB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/english"
                android:textColor="@color/header2"
                android:textSize="@dimen/_12ssp" />
        </RadioGroup>

        <com.app.riststock.spichalViews.STextView
            android:id="@+id/saveBtn"
            style="@style/primaryBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</RelativeLayout>