<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_15sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_white_fill"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_error" />

        <com.app.riststock.spichalViews.STextViewBold
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/header2"
            android:textSize="@dimen/_12ssp" />

        <com.app.riststock.spichalViews.STextView
            android:id="@+id/messageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_10sdp"
            android:text="@string/dummy"
            android:textSize="@dimen/_12ssp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray2" />

        <com.app.riststock.spichalViews.STextView
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/cancel"
            android:background="@drawable/round_corner_primary_fill"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</RelativeLayout>