<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <include
        android:id="@+id/logoToolBar"
        layout="@layout/logo_tool_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.app.riststock.spichalViews.SEditText
                android:id="@+id/userEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/round_corner_white_stroke_gray"
                android:hint="@string/user_id"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:textColor="@color/black_trans6"
                android:textStyle="bold" />

            <com.app.riststock.spichalViews.SEditText
                android:id="@+id/areaNumberEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/round_corner_white_stroke_gray"
                android:hint="@string/Area_Number"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:textColor="@color/black_trans6"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/round_corner_fill_gray_stroke_gray"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_4sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_6sdp">

                <com.app.riststock.spichalViews.SEditText
                    android:id="@+id/PasswordEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/Password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/_2sdp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/showPassBut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility_off" />
            </LinearLayout>

            <!--            <View-->
            <!--                android:layout_weight="1"-->
            <!--                android:layout_width="1dp"-->
            <!--                android:layout_height="0dp"/>-->


            <com.app.riststock.spichalViews.SButton
                android:id="@+id/loginBut"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:padding="@dimen/_12ssp"
                android:text="@string/login" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>