<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_30sdp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray2" />

            <LinearLayout
                android:id="@+id/changeLanguageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_lang" />

                <com.app.riststock.spichalViews.STextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"
                    android:textColor="@color/header2"
                    android:textSize="@dimen/_12ssp" />

                <com.app.riststock.spichalViews.STextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:id="@+id/languageTxt"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray2" />

            <LinearLayout
                android:id="@+id/staticBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_data" />

                <com.app.riststock.spichalViews.STextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Statistics"
                    android:textColor="@color/header2"
                    android:textSize="@dimen/_12ssp" />

                <com.app.riststock.spichalViews.STextViewIcon
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fal_angle_right"
                    android:scaleX="@integer/ScaleX"
                    android:textColor="@color/header2"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/baseline_keyboard_hide_24" />

                <com.app.riststock.spichalViews.STextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/keyboard_visibility"
                    android:textColor="@color/header2"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/keyboardSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" /> <!-- Default off -->

            </LinearLayout>

            </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>